--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2357,11 +2357,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Precipitation\n",
+      "count    2021.000000\n",
+      "mean        0.177279\n",
+      "std         0.461190\n",
+      "min         0.000000\n",
+      "25%         0.000000\n",
+      "50%         0.020000\n",
+      "75%         0.130000\n",
+      "max         6.700000\n"
+     ]
+    }
+   ],
    "source": [
-    "#dummary statistical data sets\n"
+    "#dummary statistical data sets\n",
+    "print(month12ddf.describe(include='all'))"
    ]
   },
   {
@@ -2373,21 +2390,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Design a query to calculate the total number stations in the dataset\n"
+    "# Design a query to calculate the total number stations in the dataset\n",
+    "\n",
+    "\n",
+    "session.query(Station.station).count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "join_query = session.query(Measurement)\\\n",
+    "                    .join(Station, Station.station == Measurement.station)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Design a query to find the most active stations (i.e. what stations have the most rows?)\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "\n",
+    "from sqlalchemy import func, desc\n",
+    "\n",
+    "session.query(Measurement.station,\n",
+    "        func.count(Measurement.station).label('qty')\n",
+    "        ).group_by(Measurement.station\n",
+    "        ).order_by(desc('qty'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import func, desc\n",
+    "\n",
+    "session.query(Measurement.station, func.count(Measurement.station).label('qty') ).group_by(Measurement.station ).order_by(desc('qty')).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Station</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>USC00519281</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>71.663781</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              min   max       mean\n",
+       "Station                           \n",
+       "USC00519281  54.0  85.0  71.663781"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "active_station = session.query(Measurement.station, Measurement.tobs).filter_by(station = 'USC00519281').all()\n",
+    "\n",
+    "active_stationdf = pd.DataFrame(active_station, columns=['Station','Temperature'])\n",
+    "active_stationddf = (active_stationdf.set_index(\"Station\")\n",
+    "                                    .select_dtypes(np.number)\n",
+    "                                    .stack()\n",
+    "                                    .groupby(level=0)\n",
+    "                                    .agg(['min','max','mean']))\n",
+    "\n",
+    "active_stationddf\n"
    ]
   },
   {
@@ -2395,9 +2544,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
